OMI-1160 added AppTracking description

--- a/AppLovin Mediation Waterfall Demo/AppLovin Mediation Waterfall Demo/Info.plist
+++ b/AppLovin Mediation Waterfall Demo/AppLovin Mediation Waterfall Demo/Info.plist
@@ -309,6 +309,8 @@
 			<string>zmvfpc5aq8.skadnetwork</string>
 		</dict>
 	</array>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>This only uses device info for more interesting and relevant ads.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
