--- a/AppLovin Mediation Waterfall Demo/Podfile
+++ b/AppLovin Mediation Waterfall Demo/Podfile
@@ -7,5 +7,6 @@ target 'AppLovin Mediation Waterfall Demo' do
 
   # Pods for AppLovin Mediation Waterfall Demo
   pod 'AppLovinMediationVerveCustomNetworkAdapter', '2.11.1.0'
+#  pod 'AppLovinSDK', '11.3.0'
 
 end
